--- a/index.html
+++ b/index.html
@@ -56,8 +56,6 @@
 													<h1 style="font-family: Arial, Helvetica, sans-serif, 'Open Sans';width: 100%;margin: 0;font-weight: 700;font-size: 24px;line-height: 1.45;letter-spacing: -.4px;color: #2D2E46;">
 														It-incubator
 													</h1>
-
-													<!-- <img src="https://cdn-thumbs.imagevenue.com/67/ef/e2/ME13MLDV_t.png" alt="logo" width="97" style="outline: none;text-decoration: none;border: none;-ms-interpolation-mode: bicubic;margin: 0;padding: 0;display: block;max-width: 100% !important;"> -->
 												</td>
 
 												<td class="link" align="right" style="border-collapse: collapse;">
@@ -79,10 +77,9 @@
 
 											<tr>
 												<td class="banner" bgcolor="#C0B2D1" align="center" style="padding-top: 20px; padding-bottom: 20px; padding-left: 0; padding-right: 0;border-collapse: collapse;">
-													<img src="https://cdn-thumbs.imagevenue.com/90/49/ea/ME13O4JN_t.png" alt="icon" style="outline: none;text-decoration: none;border: none;-ms-interpolation-mode: bicubic;margin: 0;padding: 0;display: block;width: 109px ;max-width: 100% !important;height: auto;min-height: 109px;"/>
-<!--
+													<img src="https://cdn-thumbs.imagevenue.com/90/fd/17/ME13O4TB_t.png"
+													 alt="icon" style="outline: none;text-decoration: none;border: none;-ms-interpolation-mode: bicubic;margin: 0;padding: 0;display: block;width: 109px ;max-width: 100% !important;height: auto;min-height: 109px;"/>
 
-													<img src="https://cdn-thumbs.imagevenue.com/41/06/88/ME13MONH_t.jpg" alt="banner" style="outline: none;text-decoration: none;border: none;-ms-interpolation-mode: bicubic;margin: 0;padding: 0;display: block;width: 100%;max-width: 100% !important;height: auto;min-height: 118px;"> -->
 												</td>
 											</tr>
 
@@ -107,10 +104,10 @@
 												<td class="btn btn--big" style="border-collapse: collapse;padding-top: 30px;padding-bottom: 52px;padding-left: 0;padding-right: 0;">
 													<table cellpadding="0" cellspacing="0" align="center" width="174" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
 														<tr>
-															<td class="btn-link" align="center" style="padding-top: 16px;padding-bottom: 16px;padding-left: 28px;padding-right: 28px;border-collapse: collapse;background-color: #21268F;border-radius: 4px;color: #ffffff;font-weight: 700;font-size: 13px;cursor: pointer;">
+															<td class="btn-link" align="center" style="padding-top: 16px;padding-bottom: 16px;padding-left: 28px;padding-right: 28px;border-collapse: collapse;background-color: #21268F;border-radius: 4px;color: #E5E5E5;font-weight: 700;font-size: 13px;cursor: pointer;">
 																<a href="#" style="width: 100%;font-family: Arial, Helvetica, sans-serif;font-weight: 700;font-size: 13px;text-align: center;text-decoration: none;">
-																	<span style="background-color: #21268F;border-radius: 4px;color: #ffffff;font-weight: 700;font-size: 13px;text-transform: uppercase;">
-																		start&nbsp;designing
+																	<span style="background-color: #21268F;border-radius: 4px;color: #E5E5E5;font-weight: 700;font-size: 13px;text-transform: uppercase;">
+																		restore&nbsp;password
 																	</span>
 																</a>
 															</td>
