--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 	<table cellpadding="0" cellspacing="0" width="100%"  style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt; min-height: 100vh;">
 		<tr>
-			<td bgcolor="#9890C7" style="border-collapse: collapse; ">
+			<td bgcolor="#9890C7 " style="border-collapse: collapse; ">
 
 				<table class="inner" cellpadding="0" cellspacing="0" width="100%" ; align="center" style="max-width: 600px;min-width: 300px;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
 
@@ -48,7 +48,7 @@
 							<table class="main" cellpadding="0" cellspacing="0" width="98%" ; align="center" style="max-width: 600px;min-width: 300px;border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
 
 								<tr>
-									<td class="header" bgcolor="#E5E5E5" style="padding-top: 14px;padding-bottom: 14px;padding-left: 0;padding-right: 0;border-collapse: collapse;">
+									<td class="header" bgcolor="#E5E5E5" style="padding-top: 15px;padding-bottom: 15px;padding-left: 15px;padding-right: 15px;border-collapse: collapse;">
 										<table cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
 											<tr>
 												<td class="title" align="left" style="border-collapse: collapse;">
@@ -76,7 +76,7 @@
 										<table cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;">
 
 											<tr>
-												<td class="banner" bgcolor="#C0B2D1" align="center" style="padding-top: 20px; padding-bottom: 20px; padding-left: 0; padding-right: 0;border-collapse: collapse;">
+												<td class="banner" bgcolor="#E6D4DE" align="center" style="padding-top: 20px; padding-bottom: 20px; padding-left: 0; padding-right: 0;border-collapse: collapse;">
 													<img src="https://cdn-thumbs.imagevenue.com/90/fd/17/ME13O4TB_t.png"
 													 alt="icon" style="outline: none;text-decoration: none;border: none;-ms-interpolation-mode: bicubic;margin: 0;padding: 0;display: block;width: 109px ;max-width: 100% !important;height: auto;min-height: 109px;"/>
 
